--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,7 @@ params:
       # instagram: "https://www.instagram.com/softorage/"
     share: ["facebook", "twitter", "linkedin", "telegram", "whatsapp", "reddit", "email"] # accepts array of values: "facebook", "twitter", "linkedin", "whatsapp", "reddit", "email". just type the name of those you want you articles to be able to be shared on
   meta:
-    author: "Softorage" # website-wide author | required
+    author: " " # website-wide author | required
     footerMessage: "KDD 2021 Tutorial" # text shown in footer above footer links | optional
     tagline: "Mixed Method Development of Evaluation Metrics" # shown in website title on homepage and also used in seo | required
     description: "" # should include brand name | character length: 50 to 160 characters
